/**
 * Quadratic Funding Contract.
 */
syntax = "proto3";

package QuadraticFunding;

import "aelf/core.proto";
import "aelf/options.proto";
import "acs1.proto";
import "transaction_fee.proto";
import "authority_info.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AElf.Contracts.QuadraticFunding";

service QuadraticFundingContract {
    option (aelf.csharp_state) = "AElf.Contracts.QuadraticFunding.QuadraticFundingContractState";
    option (aelf.base) = "acs1.proto";

    rpc Initialize (InitializeInput) returns (google.protobuf.Empty) {
    }

    // Only Owner.
    rpc RoundOver (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
    rpc ChangeOwner (aelf.Address) returns (google.protobuf.Empty) {
    }
    rpc BanProject (BanProjectInput) returns (google.protobuf.Empty) {
    }
    rpc SetTaxPoint (google.protobuf.Int64Value) returns (google.protobuf.Empty) {
    }
    rpc SetInterval (google.protobuf.Int64Value) returns (google.protobuf.Empty) {
    }
    rpc SetVotingUnit (google.protobuf.Int64Value) returns (google.protobuf.Empty) {
    }
    rpc RoundStart (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
    rpc Withdraw (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
    rpc DangerSetTime (DangerSetTimeInput) returns (google.protobuf.Empty) {
    }
    // Add DangerSetTime & DangerSetEndTime

    // Others.
    rpc Donate (google.protobuf.Int64Value) returns (google.protobuf.Empty) {
    }
    rpc UploadProject (UploadProjectInput) returns (google.protobuf.StringValue) {
    }
    rpc Vote (VoteInput) returns (google.protobuf.Empty) {
    }
    rpc TakeOutGrants (TakeOutGrantsInput) returns (google.protobuf.Empty) {
    }

    rpc GetAllProjects (google.protobuf.Int64Value) returns (ProjectList) {
        option (aelf.is_view) = true;
    }
    rpc GetRankingList (google.protobuf.Int64Value) returns (RankingList) {
        option (aelf.is_view) = true;
    }
    rpc GetPagedRankingList (GetPagedRankingListInput) returns (RankingList) {
        option (aelf.is_view) = true;
    }
    rpc GetRoundInfo (google.protobuf.Int64Value) returns (RoundInfo) {
        option (aelf.is_view) = true;
    }
    rpc GetVotingCost (GetVotingCostInput) returns (VotingCost) {
        option (aelf.is_view) = true;
    }
    rpc GetGrantsOf (google.protobuf.StringValue) returns (Grants) {
        option (aelf.is_view) = true;
    }
    rpc GetProjectOf (google.protobuf.StringValue) returns (Project) {
        option (aelf.is_view) = true;
    }
    rpc GetCurrentRound (google.protobuf.Empty) returns (google.protobuf.Int64Value) {
        option (aelf.is_view) = true;
    }
    rpc GetTaxPoint (google.protobuf.Empty) returns (google.protobuf.Int64Value) {
        option (aelf.is_view) = true;
    }
    rpc GetTax (google.protobuf.Empty) returns (google.protobuf.Int64Value) {
        option (aelf.is_view) = true;
    }
    rpc GetInterval (google.protobuf.Empty) returns (google.protobuf.Int64Value) {
        option (aelf.is_view) = true;
    }
    rpc GetVotingUnit (google.protobuf.Empty) returns (google.protobuf.Int64Value) {
        option (aelf.is_view) = true;
    }
    rpc CalculateProjectId (CalculateProjectIdInput) returns (google.protobuf.StringValue) {
        option (aelf.is_view) = true;
    }
    rpc IsProjectBanned (google.protobuf.StringValue) returns (google.protobuf.BoolValue) {
        option (aelf.is_view) = true;
    }
}

message InitializeInput {
    aelf.Address owner = 1;
    string vote_symbol = 2;
    int64 basic_voting_unit = 3;
    int64 interval = 4;
}

message BanProjectInput {
    string project_id = 1;
    bool ban = 2;
}

message VoteInput {
    string project_id = 1;
    int64 votes = 2;
}

message TakeOutGrantsInput {
    string project_id = 1;
    int64 amount = 2;
    aelf.Address address = 3;
}

message UploadProjectInput {
    aelf.Address address = 1;
    int32 bid = 2;
}

message Project {
    int64 round = 1;
    google.protobuf.Timestamp create_at = 2;
    // map<string, int64> votes = 3; // Use State.VotedMap to record `votes`.
    int64 total_votes = 4;
    int64 grants = 5;
    int64 support_area = 6;
    int64 withdrew = 7;
}

message ProjectList {
    repeated string value = 1;
}

message GetPagedRankingListInput {
    int64 round = 1;
    int64 page = 2;
    int64 size = 3;
}

message RankingList {
    int64 unit = 1;
    repeated string projects = 2;
    repeated int64 votes = 3;
    repeated int64 support = 4;
    repeated int64 grants = 5;
}

message RoundInfo {
    google.protobuf.Timestamp start_from = 1;
    google.protobuf.Timestamp end_at = 2;
    int64 support = 3;
    int64 pre_tax_support = 4;
}

message GetVotingCostInput {
    aelf.Address from = 1;
    string project_id = 2;
    int64 votes = 3;
}

message VotingCost {
    int64 cost = 1;
    bool votable = 2;
}

message Grants {
    int64 rest = 1;
    int64 total = 2;
}

message CalculateProjectIdInput {
    aelf.Address address = 1;
    int32 bid = 2;
}

message DangerSetTimeInput {
    google.protobuf.Timestamp start = 1;
    google.protobuf.Timestamp end = 2;
}

// Events

message ProjectBanned {
    option (aelf.is_event) = true;
    string project = 1;
    bool ban = 2;
    int64 round = 3;
}

message TaxPointChanged {
    option (aelf.is_event) = true;
    int64 tax_point = 1;
}

message RoundIntervalChanged {
    option (aelf.is_event) = true;
    int64 interval = 1;
}

message VotingUnitChanged {
    option (aelf.is_event) = true;
    int64 voting_unit = 1;
}

message Voted {
    option (aelf.is_event) = true;
    aelf.Address account = 1;
    string project = 2;
    int64 vote = 3;
    int64 round = 4;
    int64 grants = 5;
    int64 support_area = 6;
    int64 cost = 7;
}

message ProjectUploaded {
    option (aelf.is_event) = true;
    aelf.Address uploader = 1;
    string project_id = 2;
    int64 round = 3;
}

message SupportUpdated {
    option (aelf.is_event) = true;
    int64 support = 1;
    int64 round = 2;
}

message RoundStarted {
    option (aelf.is_event) = true;
    int64 round = 1;
}